fix(style)(List): not visible before hover
alert scrollbar

--- a/src/components/List.css
+++ b/src/components/List.css
@@ -92,8 +92,17 @@ textarea {
 .alert-clipboard::-webkit-scrollbar {
   background-color: rgba(0, 0, 0, 0);
 }
+
+.alert-clipboard::-webkit-scrollbar-track-piece {
+  background: rgba(17, 17, 17, 0.2);
+}
+
 .alert-clipboard::-webkit-scrollbar:hover {
   background-color: rgba(0, 0, 0, 1);
+}
+
+.alert-clipboard::-webkit-scrollbar:hover ~ ::-webkit-scrollbar-thumb {
+  background: rgba(255, 217, 34, 1);
 }
 
 @media only screen and (min-width: 576px) {
